[package]
name = "tps6699x"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"

[dependencies]
embedded-hal-async = "1.0.0"
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false}
device-driver = { version = "=1.0.0-rc.1", default-features = false, features = ["yaml"] }
defmt = { version = "0.3.0", optional = true}
log = { version = "0.4.14", optional = true }

[features]
default = []
defmt = ["dep:defmt", "device-driver/defmt-03"]
log = ["dep:log"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "time"] }