[package]
name = "tps6699x"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"

[dependencies]
bitfield = "0.19.0"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false }
device-driver = { version = "1.0.3", default-features = false, features = [
    "yaml",
] }
defmt = { version = "0.3.0", optional = true }
log = { version = "0.4.14", optional = true }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true }
bincode = { version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = []
defmt = [
    "dep:defmt",
    "device-driver/defmt-03",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embedded-usb-pd/defmt",
]
embassy = ["dep:embassy-sync", "dep:embassy-time"]
log = ["dep:log"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "time"] }
