[package]
name = "tps6699x-examples-rt685s-evk"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt", features = [
    "defmt",
    "time-driver",
    "time",
    "mimxrt685s",
] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embassy-sync = { version = "0.7.2", features = [
    "defmt",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = "0.1.2"
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { version = "0.5.0", features = [
    "defmt",
] }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
rand = { version = "0.8.5", default-features = false }

embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false }

mimxrt600-fcb = "0.1.0"
tps6699x = { path = "../../.", features = ["defmt", "embassy"] }
static_cell = "2.1.0"

[[bin]]
name = "fw_update"

[[bin]]
name = "plug_status"
